--- a/views/csv.ejs
+++ b/views/csv.ejs
@@ -56,7 +56,7 @@ z-index: 2147483647;
           </tbody>
         </table>
         
-        <button class='btn' id='test'>Import to temp</button>
+        <button class='btn' id='import'>Import to temp</button>
         <button class='btn' id='payments'>show payments tbl</button>
     </div>
   </div>
@@ -72,7 +72,6 @@ z-index: 2147483647;
           </thead>
           <tbody></tbody>
         </table> 
-        <button id='append'>Append to payments</button> 
     </div> 
     <div class='payments'>
       <h3></h3>
@@ -124,26 +123,18 @@ $('#fileLoad').change(function(e){
        });
 
 
-$('.csv #test').on('click', function(){
-  console.log('in test')
+$('.csv #import').on('click', function(){
+  console.log('in import')
   var arr=getD($('body').data().pdata)
  console.log('custarr=='+arr[1])
  $.post('csv/import',{paydata: JSON.stringify(arr)}, function(data){
     console.log('in post ++++')
     console.log('number of rec_added='+data.length)
     console.log('rec_added='+data)
-    console.log('rec details:'+data[0][4])
-    /*
-    $('.payments').show();
-            $('.payments h3').append('payments added to temp: '+data.length);
-            for(var i=0; i<data.length;i++){
-              $('.payments .table tbody').append(
-                '<tr><td>'+data[i][0]+'</td><td>'+data[i][1]+
-                '</td><td>'+data[i][2]+'</td><td>'+data[i][3]+
-                '</td><td>'+data[i][4]+'</td></tr>')
-            }//for
-    */
+    //console.log('rec details:'+data[0][4])
+    
     showPayments(data);
+    $('.csv #import').hide();
  })
 
 })
@@ -178,36 +169,22 @@ function showPayments(data){
                 '</td><td>'+data[i][2]+'</td><td>'+data[i][3]+
                 '</td><td>'+data[i][4]+'</td></tr>')
             }//for
-
+/*
   $('.temp button#append').on('click', function(){
     console.log('append button click')
     $.post('csv/append',{payrows:JSON.stringify(data)},function(data){
       console.log('in post data.length='+data.length)
     })
   })
-  /*
-  $('.temp .table tbody tr').on('click',function(){
-    console.log('temp tr click')
-    var tr={}
-    tr.custID=$(this).find('td:eq(1)').text();
-    tr.date=$(this).find('td:eq(2)').text();
-    tr.amt=$(this).find('td:eq(3)').text();
-    console.log('tr==='+$(this).find('td:eq(1)').text())
-    console.log('tr obj=='+tr.custID+'  '+tr.date+'   '+tr.amt)
-    $.get('csv/fetch_dup',{tr},function(data){
-      console.log('in fetch ++++')
-    console.log('data.length='+data.length)
-    if(data.length){
-    console.log('data=='+mySqlToCsv(data[0].tdate))
-    confirm('duplicate payment?<br>'+data[0].id+' '+data[0].custID+
-      '  '+mySqlToCsv(data[0].tdate)+' '+
-      data[0].amt+'  '+data[0].trans);
-    }
-    })/// get
-  })
-  */
+ */
 }
-
+/*
+function getD(data) creates an array of arrays (cust)
+and inserts the found custID into it
+eg 
+cust[i]=[custID,date,amt,trans]
+and returns cust
+*/
 
 function getD(data){
 cust=[];
@@ -233,42 +210,44 @@ $('.csv .table tbody tr').on('click',function(){
   console.log('row='+tableRow)
   console.log('row data=='+data[tableRow])
   console.log('tr data==='+tr.date+'   '+tr.amt+'   '+tr.trans)
-  console.log('in select tr custID=='+getCustID(tr,tableRow))
+  //console.log('in select tr custID=='+getCustID(tr,tableRow))
+  getCustID(tr,tableRow);
 })
 }
 
 function getCustID(tr,tableRow){
-//console.log('tr.trans.match(/,(.*),/)'+tr.trans.match(/,(.*),/))
-//console.log('tr.trans.match(/,(.*),/)[0]'+tr.trans.match(/,(.*),/)[0])
-//console.log('tr.trans.match(/,(.*),/)[1]'+tr.trans.match(/,(.*),/)[1])
-var name
-if(tr.trans.match(/,(.*),/)){
-    name=tr.trans.match(/,(.*),/)[1].trim();/// data between the commas
-//console.log('name====='+name)
-}
-else if(tr.trans.match(/.{12}$/)){
-  console.log('alternate  ---- name='+tr.trans.match(/.{12}$/))
-   name=tr.trans.match(/.{12}$/);
-} 
-var custID
-    if(tr.trans.match(/\d{8}/)){
-            var chk=tr.trans.match(/\d{8}/)[0].slice(4,6)
-            //console.log('regex=='+data[i][2].match(/\d{8}/)[0].slice(4,6))
-            //to validate 8 digit invoice # digit 5 and 6 give the end of
-            //quarter month (this is jan, apr, july or oct )
 
-            if(chk=='01'||chk=='04'||chk=='07'||chk=='10'){
-            var custID=tr.trans.match(/\d{8}/)[0].slice(0,4);
-            }   
-    }//if
-    if(custID){
-      $('.csv .table tbody tr:eq('+tableRow+') td:eq(0)')
+switch(true){
+  //Transfer FPS, Northwood Edinburg,< 12830119 82 H GDNS>
+  // matches end str if 8 integers + some characters
+  case /\d{8}\s.*$/.test(tr.trans):
+    var str=tr.trans.match(/\s\d{8}\s.*$/)[0]
+    var chk=str.match(/\d{8}/)[0].trim().slice(4,6)
+    if(chk=='01'||chk=='04'||chk=='07'||chk=='10'){
+                var custID=str.match(/\d{8}/)[0].slice(0,4);
+              }//if chk
+    console.log('switch Transfer FPS, Northwood Edinburg, 12830119 82 H GDNS=='+custID)
+    $('.csv .table tbody tr:eq('+tableRow+') td:eq(0)')
                       .text(custID);
-      return custID;
-    }
-    else {
-      var retval
-       $.get('csv/cust_id',{name: name},function(data){
+    break;
+  //Transfer FPS, Prentice Sg, <16760119>
+  // matches end 8 integers
+  case /\s\d{8}$/.test(tr.trans):
+     var str=tr.trans.match(/\s\d{8}$/)[0]
+     var chk=str.match(/\s\d{8}$/)[0].trim().slice(4,6)
+     if(chk=='01'||chk=='04'||chk=='07'||chk=='10'){
+                var custID=str.match(/\d{8}/)[0].slice(0,4);
+              }//if chk
+     console.log('switch inv=='+custID)
+     $('.csv .table tbody tr:eq('+tableRow+') td:eq(0)')
+                      .text(custID);
+    break;
+//Transfer FPS,<< Hume Mj>>, 6 MURIESTON CREA >>>> matches str between commas
+  case /,(.*),/.test(tr.trans):
+    var name=tr.trans.match(/,(.*),/)[1].trim();
+    console.log('switch name='+name)
+    ////////////////////////////////
+      $.get('csv/cust_id',{name: name},function(data){
         console.log('data.length='+data.length);
         if(!data.length){
             
@@ -306,9 +285,58 @@ var custID
         })// on click
         
        });//// get
-     }//else
-    //}// if(custID=0)
-    
+    /////////////////////////////////
+    break;
+  //Giro MHAIRI COOK  >>>> matches last 12 characters
+  case /.{12}$/.test(tr.trans):
+    var name=tr.trans.match(/.{12}$/)[0];
+    console.log('switch alt name='+name)
+    ////////////////////////////////
+      $.get('csv/cust_id',{name: name},function(data){
+        console.log('data.length='+data.length);
+        if(!data.length){
+            
+                      noFindCustID(tr, tableRow);
+                      return
+                 
+        }//if
+        console.log('values='+data[0].id+' '+data[0].name+' '+data[0].prop)
+        var arr=[];
+        var Dta=[];
+        for(var i=0; i<data.length; i++){
+          if(!arr.includes(data[i].id)){
+            arr.push(data[i].id)
+            Dta.push([data[i].id, data[i].name, data[i].prop])
+            }// if statement
+          }// for loop
+        console.log('Dta=='+Dta.length+'   '+Dta[0][0]+Dta[0][1]+Dta[0][2])
+        $('#payment_ .modal-title').empty()
+                  .append('</br>'+tr.date+'  '+tr.amt+'  '+tr.trans)
+          $('#payment_ .modal-body #pay tbody').empty();
+          for(var i=0; i<Dta.length; i++){
+            $('#payment_ .modal-body #pay tbody')
+                  .append('<tr><td>'+Dta[i][0]+'</td><td>'
+                            +Dta[i][1]+'</td><td>'
+                            +Dta[i][2]+'</td></tr>')
+          }// for
+        $('#payment_').modal('show');//show payments
+        $('#payment_ .modal-body #pay tbody tr').on('click',function(){
+          var tableR=$(this).index()
+          console.log('tableRow='+tableR)
+          console.log('custID='+Dta[tableR][0]);
+          $('#payment_').modal('hide');//hide payments
+          $('.csv .table tbody tr:eq('+tableRow+') td:eq(0)')
+                      .text(Dta[tableR][0]);
+        })// on click
+        
+       });//// get
+    /////////////////////////////////
+    break;
+  default:
+    console.log('switch default')
+}
+///////////////////////////////////////////
+
 
 }/// getCustID
 
